--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7087822716:AAFbnZOzS_huFFaLGR6XWGVk7arNI70VtSw"                              # Require restart after changing it while bot running
+OWNER_ID = "6806465744"                               # Require restart after changing it while bot running
+TELEGRAM_API = "28013143"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "b17c399efa6753c5823d525315bd1997"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
